Update docs from category router
