# cmd/aluraflix-api/main.go
@@ -1,13 +1,21 @@
 // @title Aluraflix API
 // @version 1.0
 // @description This is a sample service for managing videos and categories
-// @termsOfService http://swagger.io/terms/
+
 // @contact.name API Support
 // @contact.email cristovaoolegario@gmail.com
 // @license.name MIT
 // @license.url https://spdx.org/licenses/MIT.html
-// @host https://cristovao-aluraflix-api.herokuapp.com
+
+// @host localhost:3000
+//cristovao-aluraflix-api.herokuapp.com
+// @Schemes https http
 // @BasePath /api/v1
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+
 package main
 
 import (
